Fix overflow, in mobile screens during testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ body {
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 /* navBar BAR */
